# fully-self-driving-Pi

./: .bash_history  .gitconfig  .gitignore  .python_history  README.md  requirements.txt  setup.sh
.devcontainer/: DockerFile  devcontainer.json
launch/: data_collect_launch.py  fsd_launch.py  test_data_collect.py  test_inference_launch.py  test_motor_launch.py
ml/: config.py  merge_datasets.py  perception.py  pipilotnet.py  preprocessor.py  train.py
ml/models/: model.pt
rpi/: .bash_history  .gitconfig  setup.sh
rpi/.devcontainer/: DockerFile
rpi/launch/: data_collect_launch.py  fsd_launch.py  fsd_launch_v1.py  fsd_launch_v2.py  test_data_collect.py
rpi/share/gk/: repoMapping.json
rpi/src/interfaces/: CMakeLists.txt
rpi/src/self_driving_pkg/: package.xml  setup.cfg  setup.py
rpi/src/self_driving_pkg/self_driving_pkg/: __init__.py  config.py  dataset_recorder.py  detection_node.py  display_node.py  inference_node.py  motor_node.py  pid_node.py  teleop_node.py
rpi/src/self_driving_pkg/self_driving_pkg/car_utils/: ADC.py  Motor.py  Motor_api.py  test.py
rpi/src/self_driving_pkg/self_driving_pkg/ml/: pipilotnet.py  preprocessor.py
rpi/src/self_driving_pkg/self_driving_pkg/models/: model.pt  train.py
src/: DockerFile
src/interfaces/: package.xml
src/self_driving_package/: angle_node.py  camera_node.py  inference_node.py  motor_node.py
src/self_driving_pkg/: package.xml  setup.cfg  setup.py
src/self_driving_pkg/launch/: test_launch.py
src/self_driving_pkg/self_driving_pkg/: camera_node.py  dataset_recorder.py  display_node.py  motor_node.py  (+3 more)
(+7 files in other folders)
