<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>self_driving_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aqilfaizal2004@gmail.com">aqil</maintainer>
  <license>TODO: License declaration</license>


  <!-- <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <exec_depend>python3-numpy</exec_depend> # These are dependencies to python3-opencv
  <exec_depend>libboost-python-dev</exec_depend> # These are dependencies to python3-opencv
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python-smbus</exec_depend>
  <exec_depend>python3-gpiozero</exec_depend> -->
  <exec_depend>interfaces</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
